starter pack complete

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-    <div class="logo"></div>
+    <div class="logo">
+      <!-- Image Sources:
+      https://banner2.kisspng.com/20180324/wqw/kisspng-clock-face-clip-art-analog-clock-without-hands-5ab6587965f8e1.8413058015218996414177.jpg
+      https://banner2.kisspng.com/20180727/aty/kisspng-clock-face-minute-clip-art-minute-hand-5b5b9d6c16de56.9885948115327307320937.jpg -->
+      <div class="clock-hand">
+        <div class="clocky"></div>
+      </div>
+    </div>
     <div id="main">Loading</div>
   </body>
 </html>
