--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>starter pack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Creepster" rel="stylesheet">
   </head>
   <body>
     <div id="main">Loading</div>
